--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "assert.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
